--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,6 @@ Maintainer: Claudio Isella <claudio.isella@ircc.it>
 Depends: R (>= 2.11.1), fields, Biobase
 Imports: graphics, grDevices, stats, methods
 Description: Identification of differentially expressed genes and false discovery rate (FDR) calculation by Multiple Comparison test
-biocViews: Statistics, MultipleComparisons, Microarray, DifferentialExpression, GeneExpression
+biocViews: MultipleComparisons, Microarray, DifferentialExpression, GeneExpression
 License: GPL-2
 LazyLoad: yes
