--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ importFrom(methods, "@<-", new)
 importFrom(stats, median, quantile)
 
 
-export(mulCalc, mulDiff, mulFSG, mulOptPars, mulOptPlot, mulOpt,  mulPerm, mulScores, mulCAND, mulDELTA, mulParOpt)
+export(mulCalc, mulDiff, mulFSG, mulOptPars, mulOptPlot, mulOpt,  mulPerm, mulScores, mulCAND, mulDELTA, mulParOpt, mulInt, mulIndex)
 exportClasses(MULCOM, MULCOM_P)
 
 
