--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,9 @@
 Package: Mulcom
 Type: Package
 Title: Calculates Mulcom test
+Version: 1.2.2
+Date: 2011-17-06
+Title: Calculates Mulcom test
 Version: 1.2.1
 Date: 2011-17-06
 Author: Claudio Isella
