--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ importMethodsFrom(Biobase, exprs, featureNames, pData, varLabels)
 importClassesFrom(methods, array, matrix)
 importFrom(graphics, axis, box, mtext, par)
 importFrom(grDevices, topo.colors)
-importFrom(methods, "@<-", new)
+importFrom(methods, new)
 importFrom(stats, median, quantile)
 
 
