modify to new biocViews to DESCRIPTION file
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/Mulcom@87035 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,16 @@
 Package: Mulcom
 Type: Package
 Title: Calculates Mulcom test
-Version: 1.13.1
+Version: 1.13.2
 Date: 2011-10-08
 Author: Claudio Isella
 Maintainer: Claudio Isella <claudio.isella@ircc.it>
 Depends: R (>= 2.10), fields, Biobase
 Imports: graphics, grDevices, stats, methods
-Description: Identification of differentially expressed genes and false discovery rate (FDR) calculation by Multiple Comparison test
-biocViews: Statistics, MultipleComparisons, Microarray, DifferentialExpression, GeneExpression
+Description: Identification of differentially expressed genes and false
+        discovery rate (FDR) calculation by Multiple Comparison test
 License: GPL-2
 LazyLoad: yes
 Packaged: 2011-08-10 16:48:17 UTC; cisella
+biocViews: StatisticalMethod, MultipleComparison, Microarray,
+        DifferentialExpression, GeneExpression
